--- a/_extensions/front-van/_extension.yml
+++ b/_extensions/front-van/_extension.yml
@@ -5,6 +5,8 @@ quarto-required: ">=1.7.0"
 contributes:
   formats:
     common:
+      filters:
+        - wordcount.lua
     pdf:
       toc: false
       number-sections: true
